--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "root": true,
-  "extends": ["next/babel", "next/core-web-vitals", "eslint:recommended"],
+  "extends": ["next/core-web-vitals", "eslint:recommended"],
   "plugins": ["testing-library"],
   "overrides": [
     // Only uses Testing Library lint rules in test files
