--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "eslint": "^8.33.0",
-    "eslint-config-next": "13.1.2",
+    "framer-motion": "^8.5.4",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,6 +29,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.33.0",
+    "eslint-config-next": "13.1.2",
     "eslint-plugin-testing-library": "^5.10.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
