--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "framer-motion": "^8.5.4",
-    "next": "13.1.2",
+    "next": "^13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toggle-dark-mode": "^1.1.1",
