--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,12 @@
   "rules": {
     "semi": ["error", "always"],
     "quotes": ["warn", "single"]
+  },
+  "globals": {
+    "React": true,
+    "context": true,
+    "expect": true,
+    "jsdom": true,
+    "JSX": true
   }
 }
