--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@types/react-dom": "18.0.10",
     "framer-motion": "^8.5.4",
     "next": "^13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-toggle-dark-mode": "^1.1.1",
     "typescript": "4.9.4"
   },
