--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "root": true,
   "extends": ["next/core-web-vitals", "eslint:recommended"],
-  "plugins": ["testing-library"],
+  "plugins": ["testing-library", "jest"],
   "overrides": [
     // Only uses Testing Library lint rules in test files
     {
@@ -9,7 +9,11 @@
         "**/__tests__/**/*.[jt]s?(x)",
         "**/?(*.)+(spec|test).[jt]s?(x)"
       ],
-      "extends": ["plugin:testing-library/react"]
+      "extends": [
+        "plugin:testing-library/react",
+        "plugin:jest/recommended",
+        "plugin:jest/style"
+      ]
     }
   ],
   "rules": {
@@ -22,5 +26,8 @@
     "expect": true,
     "jsdom": true,
     "JSX": true
+  },
+  "env": {
+    "jest/globals": true
   }
 }
