--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "9.4.1",
     "react-toggle-dark-mode": "^1.1.1",
     "typescript": "4.9.5"
   },
@@ -31,7 +32,7 @@
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
     "autoprefixer": "10.4.13",
-    "eslint": "^8.33.0",
+    "eslint": "8.33.0",
     "eslint-config-next": "13.1.2",
     "eslint-plugin-jest": "27.2.1",
     "eslint-plugin-testing-library": "5.10.0",
