--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lottie-player": "1.5.4",
     "react-toggle-dark-mode": "1.1.1",
     "typescript": "4.9.5"
   },
