--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@types/react-dom": "18.0.10",
     "daisyui": "^2.50.0",
     "framer-motion": "8.5.5",
+    "lottie-react": "2.3.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-lottie-player": "1.5.4",
     "react-toggle-dark-mode": "1.1.1",
     "typescript": "4.9.5"
   },
