--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
     "daisyui": "2.50.0",
+    "firebase-admin": "11.5.0",
     "firebase-functions": "latest",
     "framer-motion": "9.0.2",
     "lottie-react": "2.3.1",
