--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -24,9 +24,9 @@ jobs:
         uses: github/super-linter/slim@v4.10.1
         env:
           VALIDATE_ALL_CODEBASE: false
-          VALIDATE_YAML: false
-          VALIDATE_XML: false
+          VALIDATE_MARKDOWN: false
           VALIDATE_TYPESCRIPT_STANDARD: false
+          VALIDATE_YAML: false
           IGNORE_GITIGNORED_FILES: true
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
