--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -38,6 +38,7 @@ jobs:
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v3.1.1
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
           flags: unittests
           name: codecov-portfolio
