--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,10 +30,10 @@ jobs:
           node-version: 18
           cache: 'yarn'
 
-      - name: Install project dependencies
-        run: yarn install
+      - name: Install dependencies
+        run: yarn install --immutable --immutable-cache --check-cache
 
-      - name: Test project
+      - name: Run unit test
         run: yarn test
 
       - name: Generate coverage report
