--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@radix-ui/react-toggle": "1.0.3",
     "@radix-ui/react-tooltip": "1.0.6",
     "@svgr/webpack": "8.0.1",
     "clsx": "2.0.0",
@@ -23,17 +24,17 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.10.1",
-    "react-toggle-dark-mode": "1.1.1",
     "seamless-scroll-polyfill": "2.3.4",
     "sharp": "0.32.4"
   },
   "devDependencies": {
+    "@eslint/js": "8.46.0",
     "@testing-library/dom": "9.3.1",
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
+    "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
@@ -44,9 +45,9 @@
     "husky": "8.0.3",
     "jest": "29.6.2",
     "jest-canvas-mock": "2.5.2",
-    "jest-environment-jsdom": "29.6.1",
+    "jest-environment-jsdom": "29.6.2",
     "postcss": "8.4.27",
-    "prettier": "2.8.8",
+    "prettier": "3.0.0",
     "prettier-plugin-tailwindcss": "0.4.1",
     "pretty-quick": "3.1.3",
     "tailwind-merge": "1.14.0",
