--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "cssnano": "6.0.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "eslint-plugin-jest": "27.2.3",
@@ -48,6 +49,7 @@
     "jest-canvas-mock": "2.5.2",
     "jest-environment-jsdom": "29.6.2",
     "postcss": "8.4.28",
+    "postcss-import": "15.1.0",
     "prettier": "3.0.2",
     "prettier-plugin-tailwindcss": "0.5.3",
     "pretty-quick": "3.1.3",
