--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -1,5 +1,8 @@
 ---
 name: Deploy to production
+env:
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
 on:
   push:
@@ -15,15 +18,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3.5.3
 
+      - name: Login to Docker Hub
+        run: |
+          echo "${{ secrets.DOCKERHUB_TOKEN }}" || docker login -u ${DOCKERHUB_USERNAME} --password-stdin
+
+      - name: Build and push Docker image
+        run: |
+          docker build -t portfolio-prod:latest --quiet --compress --target production .
+          docker tag portfolio-prod:latest ${DOCKERHUB_USERNAME}/portfolio-prod:latest
+          docker push ${DOCKERHUB_USERNAME}/portfolio-prod:latest
+
       - name: Install pnpm
         run: npm i -g pnpm
-
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v3.8.0
-        with:
-          node-version: 18
-          cache: 'pnpm'
-          cache-dependency-path: pnpm-lock.yaml
 
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
