--- a/.github/workflows/deploy-stage.yaml
+++ b/.github/workflows/deploy-stage.yaml
@@ -50,8 +50,10 @@ jobs:
         run: vercel deploy --prebuilt --token="${VERCEL_TOKEN}"
 
       - name: Login to Docker Hub
-        run: | 
-          echo "${{ secrets.DOCKERHUB_TOKEN }}" || docker login -u "${DOCKERHUB_USERNAME}" --password-stdin
+        uses: docker/login-action@v2.2.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Docker image
         run: |
