--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t portfolio-prod:latest --quiet --compress --target production .
+          docker build -t portfolio-prod:latest --quiet --compress --target prod .
           docker tag portfolio-prod:latest "${DOCKERHUB_USERNAME}/portfolio-prod:latest"
           docker push "${DOCKERHUB_USERNAME}/portfolio-prod:latest"
 
