--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "lint": "next lint",
+    "prepare": "husky install",
     "start": "next start",
     "test": "jest",
     "test:cov": "jest --coverage",
@@ -48,6 +49,7 @@
     "jest": "29.6.4",
     "jest-canvas-mock": "2.5.2",
     "jest-environment-jsdom": "29.6.4",
+    "lint-staged": "14.0.1",
     "postcss": "8.4.28",
     "postcss-import": "15.1.0",
     "prettier": "3.0.2",
@@ -57,11 +59,12 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
-  "optionalDependencies": {
-    "husky": "8.0.3"
-  },
   "engines": {
     "node": "18"
   },
-  "packageManager": "pnpm@8.6.12"
+  "packageManager": "pnpm@8.6.12",
+  "lint-staged": {
+    "*.{js, jsx, ts, tsx}": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
+  }
 }
