--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -24,6 +24,7 @@ jobs:
         uses: github/super-linter/slim@v5.0.0
         env:
           VALIDATE_ALL_CODEBASE: false
+          VALIDATE_BASH: false
           VALIDATE_CSS: false
           VALIDATE_DOCKERFILE_HADOLINT: false
           VALIDATE_MARKDOWN: false
