--- a/.gitignore
+++ b/.gitignore
@@ -27,15 +27,10 @@
 *.pem
 .vscode
 .idea
+.eslintcache
 
 # debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 .pnpm-debug.log*
-
-# local env files
-.env*.local
 
 # vercel
 .vercel
