--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "analyze": "cross-env ANALYZE=true next build",
     "build": "next build",
     "dev": "next dev",
     "format": "prettier --check --ignore-path .gitignore .",
@@ -20,39 +21,40 @@
     "@radix-ui/react-tooltip": "1.0.6",
     "@svgr/webpack": "8.1.0",
     "clsx": "2.0.0",
-    "framer-motion": "10.16.2",
+    "framer-motion": "10.16.4",
     "lottie-light-react": "2.4.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.10.1",
+    "react-icons": "4.11.0",
     "seamless-scroll-polyfill": "2.3.4",
     "sharp": "0.32.5"
   },
   "devDependencies": {
-    "@eslint/js": "8.48.0",
+    "@eslint/js": "8.49.0",
+    "@next/bundle-analyzer": "13.4.19",
     "@testing-library/dom": "9.3.1",
-    "@testing-library/jest-dom": "6.1.2",
+    "@testing-library/jest-dom": "6.1.3",
     "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.4.3",
-    "@types/node": "20.5.7",
+    "@testing-library/user-event": "14.5.1",
+    "@types/node": "20.6.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "cross-env": "7.0.3",
     "cssnano": "6.0.1",
-    "eslint": "8.48.0",
+    "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
-    "eslint-plugin-jest": "27.2.3",
+    "eslint-plugin-jest": "27.4.0",
     "eslint-plugin-testing-library": "6.0.1",
-    "eslint-plugin-yml": "1.8.0",
     "husky": "8.0.3",
-    "jest": "29.6.4",
+    "jest": "29.7.0",
     "jest-canvas-mock": "2.5.2",
-    "jest-environment-jsdom": "29.6.4",
+    "jest-environment-jsdom": "29.7.0",
     "lint-staged": "14.0.1",
     "postcss": "8.4.29",
     "postcss-import": "15.1.0",
-    "prettier": "3.0.2",
+    "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.4",
     "pretty-quick": "3.1.3",
     "tailwind-merge": "1.14.0",
