--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "6.4.2",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "@icons-pack/react-simple-icons": "9.0.0",
     "@radix-ui/react-toggle": "1.0.3",
     "@radix-ui/react-tooltip": "1.0.6",
     "@svgr/webpack": "8.1.0",
@@ -26,19 +29,18 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.11.0",
     "seamless-scroll-polyfill": "2.3.4",
-    "sharp": "0.32.5"
+    "sharp": "0.32.6"
   },
   "devDependencies": {
     "@eslint/js": "8.49.0",
     "@next/bundle-analyzer": "13.4.19",
-    "@testing-library/dom": "9.3.1",
+    "@testing-library/dom": "9.3.3",
     "@testing-library/jest-dom": "6.1.3",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.5.1",
-    "@types/node": "20.6.1",
-    "@types/react": "18.2.21",
+    "@types/node": "20.6.2",
+    "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "cross-env": "7.0.3",
@@ -52,7 +54,7 @@
     "jest-canvas-mock": "2.5.2",
     "jest-environment-jsdom": "29.7.0",
     "lint-staged": "14.0.1",
-    "postcss": "8.4.29",
+    "postcss": "8.4.30",
     "postcss-import": "15.1.0",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.4",
