--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "clsx": "2.0.0",
     "framer-motion": "10.16.4",
     "lottie-light-react": "2.4.0",
-    "next": "13.4.19",
+    "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "seamless-scroll-polyfill": "2.3.4",
@@ -34,19 +34,20 @@
   },
   "devDependencies": {
     "@eslint/js": "8.49.0",
-    "@next/bundle-analyzer": "13.4.19",
+    "@next/bundle-analyzer": "13.5.2",
     "@testing-library/dom": "9.3.3",
     "@testing-library/jest-dom": "6.1.3",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.5.1",
-    "@types/node": "20.6.1",
-    "@types/react": "18.2.21",
+    "@types/jest": "29.5.5",
+    "@types/node": "20.6.3",
+    "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
+    "autoprefixer": "10.4.16",
     "cross-env": "7.0.3",
     "cssnano": "6.0.1",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "13.5.2",
     "eslint-plugin-jest": "27.4.0",
     "eslint-plugin-testing-library": "6.0.1",
     "husky": "8.0.3",
@@ -61,6 +62,8 @@
     "pretty-quick": "3.1.3",
     "tailwind-merge": "1.14.0",
     "tailwindcss": "3.3.3",
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.1",
     "typescript": "5.2.2"
   },
   "engines": {
