Add import aliases for public folder
1. /public/animations -> @/animations
2. /public/images -> @/images

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
+      "@/animations/*": ["./public/animations/*"],
+      "@/images/*": ["./public/images/*"],
       "@/*": ["./*"]
     },
     "plugins": [
