--- a/package.json
+++ b/package.json
@@ -17,59 +17,59 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@dotlottie/react-player": "1.6.6",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@icons-pack/react-simple-icons": "9.0.1",
+    "@icons-pack/react-simple-icons": "9.2.0",
     "@radix-ui/react-toggle": "1.0.3",
     "@radix-ui/react-tooltip": "1.0.7",
     "@svgr/webpack": "8.1.0",
     "clsx": "2.0.0",
-    "framer-motion": "10.16.4",
-    "lottie-light-react": "2.4.0",
-    "next": "13.5.3",
+    "framer-motion": "10.16.16",
+    "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "seamless-scroll-polyfill": "2.3.4",
-    "sharp": "0.32.6"
+    "sharp": "0.33.0"
   },
   "devDependencies": {
-    "@eslint/js": "8.50.0",
-    "@next/bundle-analyzer": "13.5.2",
+    "@eslint/js": "8.55.0",
+    "@next/bundle-analyzer": "14.0.4",
     "@testing-library/dom": "9.3.3",
-    "@testing-library/jest-dom": "6.1.4",
-    "@testing-library/react": "14.0.0",
+    "@testing-library/jest-dom": "6.1.5",
+    "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.1",
-    "@types/jest": "29.5.5",
-    "@types/node": "20.8.10",
-    "@types/react": "18.2.23",
-    "@types/react-dom": "18.2.7",
+    "@types/jest": "29.5.11",
+    "@types/node": "20.10.4",
+    "@types/react": "18.2.43",
+    "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.16",
     "cross-env": "7.0.3",
     "cssnano": "6.0.1",
-    "eslint": "8.52.0",
-    "eslint-config-next": "13.5.2",
-    "eslint-plugin-jest": "27.4.0",
-    "eslint-plugin-testing-library": "6.0.1",
+    "eslint": "8.55.0",
+    "eslint-config-next": "14.0.4",
+    "eslint-plugin-jest": "27.6.0",
+    "eslint-plugin-testing-library": "6.2.0",
     "husky": "8.0.3",
     "jest": "29.7.0",
     "jest-canvas-mock": "2.5.2",
     "jest-environment-jsdom": "29.7.0",
-    "lint-staged": "14.0.1",
-    "postcss": "8.4.31",
+    "lint-staged": "15.2.0",
+    "postcss": "8.4.32",
     "postcss-import": "15.1.0",
-    "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "0.5.6",
+    "prettier": "3.1.1",
+    "prettier-plugin-tailwindcss": "0.5.9",
     "pretty-quick": "3.1.3",
-    "tailwind-merge": "1.14.0",
-    "tailwindcss": "3.3.3",
+    "tailwind-merge": "2.1.0",
+    "tailwindcss": "3.3.6",
     "ts-jest": "29.1.1",
-    "ts-node": "10.9.1",
-    "typescript": "5.2.2"
+    "ts-node": "10.9.2",
+    "typescript": "5.3.3"
   },
   "engines": {
-    "node": "18"
+    "node": "20"
   },
-  "packageManager": "pnpm@8.6.12",
+  "packageManager": "pnpm@8.11.0",
   "lint-staged": {
     "*.{js, jsx, ts, tsx}": "eslint --cache --fix",
     "*.{js,css,md}": "prettier --write"
