--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -16,9 +20,15 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/animations/*": ["./public/animations/*"],
-      "@/images/*": ["./public/images/*"],
-      "@/*": ["./*"]
+      "@/animations/*": [
+        "./public/animations/*"
+      ],
+      "@/images/*": [
+        "./public/images/*"
+      ],
+      "@/*": [
+        "./*"
+      ]
     },
     "plugins": [
       {
@@ -33,5 +43,7 @@
     ".next/types/**/*.ts",
     "./jest.setup.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
